# OnBoarding

./: .gitignore  CMakeLists.txt  I2CHelperFct.cpp  I2CHelperFct.h  OnBoarding.cpp  README.md  baseManager.h  commManager.cpp  commManager.h  commandParser.cpp  commandParser.h  fileSystem.cpp  fileSystem.h  globalConfig.h  imuTenDof.cpp  imuTenDof.h  logger.cpp  logger.h  myTypes.h  optimizers.txt  statusManager.cpp  statusManager.h  systemClock.cpp  systemClock.h  systemComm.cpp  systemComm.h
Archive/: OnBoarding.cpp  allManager.h  baseManager.h  commManager.cpp  commManager.h  commandParser.cpp  fileSystem.cpp  fileSystem.h  globalConfig.h  logger.cpp  logger.h  statusManager.cpp  statusManager.h  systemClock.cpp  systemClock.h
Documentation/: Components.dia  OnBoarding.dia  Receiver.dia
Receiver/: receiver.cpp  receiver.ino
cmake/Platform/: Arduino.cmake
